syntax = "proto2";

package scaii.common;

// A message to initialize the visualization environment.
//
// In the future this will contain things like sprite sheet paths
// and animation info for certain classes of entities.  At this point
// the only field is a flog to control whether viz will run in test 
// mode (which means it will echo back state after state updates) or
// non-test mode (which means it will send back an RpcAck)
message VizInit {
	optional bool test_mode = 1;
	optional int64 step_count = 2;
    optional uint32 gameboard_width = 3;
    optional uint32 gameboard_height = 4;
	repeated ExplanationPoint explanations = 5;
	repeated string reward_types = 6;
}

message ExplanationPoints {
	repeated ExplanationPoint explanation_points = 1;
}
message ExplanationPoint {
   // which step in the game this explanation corresponds to
    optional uint32 step = 1;
	// the id will be a one-up number that may or may not be equiv to the step
    optional uint32 id = 2; 
	// short identifier to be shown on timeline (ex "knight attacks x")
    optional string title = 3; 
	// longer string that could be shown in tooltip on mouseover  
	// (if the particular explanation system in play can generate a meaningful summary) 
    optional string description = 4;
    optional Saliency saliency = 5;
    optional BarChart bar_chart = 6;
}

message Layer {
    optional string name = 1;
    repeated double cells = 2;
    // to address the cell: row major order (row, row...)
    optional uint32 width = 3;
    optional uint32 height = 4;
}

message Layers {
   repeated Layer layers = 1;
}

message Saliency {
    map<string,Layers> saliency_map= 1;
}


message BarChart {
  repeated BarGroup groups = 1;
  optional string title = 2;
  optional string v_title = 3;
  optional string h_title = 4;
}

message BarGroup {
	optional double value = 1;
    repeated Bar bars = 2;
    optional string saliency_id = 3;
    optional string name = 4;
}

message Bar {
    required double value = 1;
    optional string saliency_id = 2;
    optional string name = 3;
}

// The packet containing what to draw. This is ALWAYS
// a delta, so the first packet should contain all
// information. Future packets need only contain information
// on what has changed since the last packet.
message Viz {
	repeated Entity entities = 1; 
	map<string,string> cumulative_rewards = 2;
}
// chart info for Magesh data demo
message ChartInfo {
	optional string chart_title = 1;
	optional string h_axis_title = 2;
	optional string v_axis_title = 3;
	optional ChartActions actions = 4;
	repeated ChartValueVector value_vectors = 5;
}
message ChartActions {
	optional string actions_label = 1;
	repeated string action_names = 2;
}
message ChartValueVector {
	optional string label = 1;
	repeated double action_values = 2;
}

// An drawable object
message Entity {
	// This is not globally unique, but rather
	// unique to the sender of the packet
	// (that is, the Endpoint reigstered as the
	// "src" of the enclosing `ScaiiPacket`).
	//
	// This is so multiple modules do not need to
	// coordinate their visualization IDs.
	required uint64 id = 1;

	// The absolute position of the entity,
	// objects are drawn as if this is the
	// center
	optional Pos pos = 2;

	// A series of shapes that represent this
	// entity
	repeated Shape shapes = 3;

	// Delete this entity, this does
	// NOT trigger any death animations,
	// you must orchestrate those yourself.
	//
	// If this is true, the other fields are
	// ignored (except ID, naturally).
	required bool delete = 4;
	map<string,string> stringMetadata = 5;
	map<string,string> boolStringMetadata = 6;
	map<string,string> floatStringMetadata = 7;
	map<string,int64> intMetadata = 8;
	map<string,bool> boolMetadata = 9;
	map<string,float> floatMetadata = 10;
	optional uint64 ui_layer = 11;
	optional bool non_clickable = 12;
    optional float hp = 13;
    optional float max_hp = 14;
}
	
// A position.
// The positions x and y can be interpreted
// roughly as pixels.
message Pos {
	optional double x = 1;
	optional double y = 2;
}

// Note, since protobuf has no single "byte"
// type, please clamp these values in [0,255]
// yourself
//
// Fields are required since updating the
// values individually can be a pain in
// some libraries
message Color {
	required uint32 r = 1;
	required uint32 g = 2;
	required uint32 b = 3;
	required uint32 a = 4;
}

// An equilateral triangle with a base
// of the given length
message Triangle {
	optional double base_len = 1;
}

// A circle
message Circle {
	optional double radius = 1;
}

// A rectangle
message Rect {
	optional double width = 1;
	optional double height = 2;
}


// A kite : length has enpoints forward and back
message Kite {
	optional double width = 1;
	optional double length = 2;
}


// An arrow will be drawn with back of arrow at Entity.Pos and tip of arrow drawn at Arrow.target_pos
// thickness is how many pixels wide
// head_length will be obeyed up until 1/3 length of shaft
// Ex. for arrow length 50, head_length could be 10 and head width could be 5 
message Arrow {
	optional Pos target_pos = 1;
	optional uint32 thickness = 2;
	optional uint32 head_length = 3; 
	optional uint32 head_width = 4; 
}


// An octagon.  If all three dimensions are equal, it will be a regular octagon,
// otherwise it will be elongated. 
// - edge_bottom will always be same as edge_top
// - edge_right will always be same as edge_left
// - edge_corner will be used for all corner segments
// angle at edge connections all == 135 degrees
message Octagon {
	optional double edge_top = 1;
	optional double edge_corner = 2;
	optional double edge_left = 3;
}

// An arbitrary shape relative to the center
// of the entity it belongs to
message Shape {
	// This ID is relative to the entity, not
	// universally unique to the program
	required uint64 id = 1;
	optional Pos relative_pos = 2;
	optional Color color = 3;

	// Orientation in radians 
	required double rotation = 4;
	// What form the shape takes
	// if multiple of these are set at once, the behavior
	// is up to the viz engine implementer,
	// and may not be consistent between packets
	optional Rect rect = 20;
	optional Triangle triangle = 21;
	
	optional string tag = 22;
	optional Color gradient_color = 23;
	optional Kite kite = 24;
	optional Octagon octagon = 25;
	optional Arrow arrow = 26;
	optional Circle circle = 27;

	// delete this shape from the entity
	// if this ID is not registered, it is a
	// no-op
	//
	// If this is true, the other fields (except ID)
	// are ignored
	required bool delete = 40;

}

message StudyQuestions {
    repeated StudyQuestion study_questions = 1;
    required string user_id = 2;
    required string treatment_id = 3;
    required string answer_filename = 4;
}

message StudyQuestion {
    required string step = 1;
    required string question = 2;
    repeated string answers = 3;
    required string question_id_for_step = 4;
    required string question_type = 5;
}

message StudyQuestionAnswer {
    required string step = 1;
    required string question_number = 2;
    required string question = 3;
    required string answer = 4;
    required string user_id = 5;
    required string treatment_id = 6;
}

message LogFileEntry {
    required string filename = 1;
    required string entry = 2;
    required bool is_last_line = 3;
}
message JedTest {
    required string ignore_this = 1;
}

// This will be used to send the json string
message SC2Data {
	optional string session_data = 1;
}